Position absolute added to stop 1px gap at bottom of footer on mobile devices + padding removed from p tag

--- a/src/app/components/footer/footer.component.sass
+++ b/src/app/components/footer/footer.component.sass
@@ -2,8 +2,7 @@
 footer
 	width: 100%
 	height: 50px
+	position: absolute
 	box-sizing: border-box
 	background-image: $secondary-gradient
 	color: $primary-paragraph-color
-	p
-	 padding: 1rem
